# KeyShooter_C_SFML

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sfml
include/: Bullet.h  Coin.h  Explosion.h  Game.h  Images.h  Player.h  Random.h  Ship.h  System.h  Word.h
rsc/: words1.txt
src/: Bullet.cpp  Coin.cpp  Explosion.cpp  Game.cpp  Images.cpp  Player.cpp  Random.cpp  Ship.cpp  System.cpp  Word.cpp  main.cpp
